# SFMLStarter

./: AssetManager.cpp  AssetManager.h  AssetNotFoundException.h  CMakeLists.txt  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Systems.cpp  Systems.h  main.cpp
include/: Components.h  Config.h  MainScene.h  SceneManager.h  Systems.h
scenes/: MainScene.cpp  MainScene.h
src/: MainScene.cpp  Scene.cpp  Systems.cpp  main.cpp
